mps-m/Mpal.Parser/MPALParser.cs
// $ANTLR 3.2 Sep 23, 2009 12:02:23 J:\\Projekte\\Mea\\MPAL\\mpal-comp\\Mpal.Parser\\MPAL.g 2010-10-26 14:53:58

// The variable 'variable' is assigned but its value is never used.
#pragma warning disable 168, 219
// Unreachable code detected.
#pragma warning disable 162


using System;
using Antlr.Runtime;
using IList 		= System.Collections.IList;
using ArrayList 	= System.Collections.ArrayList;
using Stack 		= Antlr.Runtime.Collections.StackList;



using Antlr.Runtime.Tree;

/******************************************************************************************************
* MPAL grammar                                                                                        *
*                                                                                                     *
* Copyright (C) 2006-2010 Atesion GmbH. All rights reserved.                             *
*******************************************************************************************************/
public partial class MPALParser : Parser
{
    public static readonly string[] tokenNames = new string[] 
	{
        "<invalid>", 
		"<EOR>", 
		"<DOWN>", 
		"<UP>", 
		"PROGRAM", 
		"FUNCTION", 
		"VAR", 
		"VAR_TEMP", 
		"CONSTANT", 
		"VAR_INPUT", 
		"VAR_IN_OUT", 
		"STRING", 
		"WSTRING", 
		"VAR_OUTPUT", 
		"ARRAY", 
		"OF", 
		"END_FUNCTION", 
		"FUNCTION_BLOCK", 
		"END_FUNCTION_BLOCK", 
		"NOT", 
		"EXIT", 
		"ASSIGN", 
		"ASSIGN2", 
		"COLON", 
		"LBRACKED", 
		"LRBRACKED", 
		"COMMA", 
		"DIV", 
		"MOD", 
		"MUL", 
		"OR", 
		"XOR", 
		"EQU", 
		"VOID", 
		"SINT", 
		"INT", 
		"DINT", 
		"LINT", 
		"USINT", 
		"UINT", 
		"UDINT", 
		"ULINT", 
		"COUNTER", 
		"TIMER", 
		"TIME", 
		"DATE_LIT", 
		"TIME_OF_DAY_LIT", 
		"TOD", 
		"DATE_AND_TIME", 
		"DT", 
		"BOOL", 
		"BYTE", 
		"WORD", 
		"DWORD", 
		"LWORD", 
		"REAL", 
		"LREAL", 
		"CHAR", 
		"WCHAR", 
		"R_EDGE", 
		"F_EDGE", 
		"STRUCT", 
		"LEQ", 
		"GEQ", 
		"NEQ", 
		"IF", 
		"CASE", 
		"FOR", 
		"TO", 
		"BY", 
		"DO", 
		"WHILE", 
		"REPEAT", 
		"CONTINUE", 
		"TRUE", 
		"FALSE", 
		"ELSE", 
		"ELSIF", 
		"USES", 
		"TYPE", 
		"UNTIL", 
		"THEN", 
		"LS", 
		"GR", 
		"POW", 
		"RETURN", 
		"SHARP", 
		"PLUS", 
		"NEG", 
		"DOTDOT", 
		"END_PROGRAM", 
		"IDENTIFIER", 
		"INTEGER", 
		"STRING_LITERAL_UNI", 
		"STRING_LITERAL", 
		"REAL_CONSTANT", 
		"BINARY_INTEGER", 
		"OCTAL_INTEGER", 
		"HEX_INTEGER", 
		"AND", 
		"DOT", 
		"EXPONENT", 
		"COMMENT", 
		"PRAGMAS", 
		"LINE_COMMENT", 
		"WS", 
		"']'", 
		"')'", 
		"';'", 
		"'END_STRUCT'", 
		"'END_TYPE'", 
		"'END_VAR'", 
		"'END_FOR'", 
		"'END_WHILE'", 
		"'END_REPEAT'", 
		"'END_IF'", 
		"'END_CASE'"
    };

    public const int FUNCTION = 5;
    public const int EXPONENT = 101;
    public const int WHILE = 71;
    public const int DT = 49;
    public const int LREAL = 56;
    public const int MOD = 28;
    public const int STRING_LITERAL_UNI = 93;
    public const int LS = 82;
    public const int F_EDGE = 60;
    public const int CASE = 66;
    public const int DATE_AND_TIME = 48;
    public const int CHAR = 57;
    public const int DO = 70;
    public const int SINT = 34;
    public const int NOT = 19;
    public const int EOF = -1;
    public const int WCHAR = 58;
    public const int TYPE = 79;
    public const int WORD = 52;
    public const int STRING_LITERAL = 94;
    public const int POW = 84;
    public const int RETURN = 85;
    public const int LBRACKED = 24;
    public const int USINT = 38;
    public const int VAR = 6;
    public const int VOID = 33;
    public const int GEQ = 63;
    public const int COMMENT = 102;
    public const int ARRAY = 14;
    public const int OCTAL_INTEGER = 97;
    public const int EXIT = 20;
    public const int VAR_OUTPUT = 13;
    public const int SHARP = 86;
    public const int LINE_COMMENT = 104;
    public const int ELSE = 76;
    public const int BOOL = 50;
    public const int INT = 35;
    public const int LRBRACKED = 25;
    public const int LWORD = 54;
    public const int OF = 15;
    public const int MUL = 29;
    public const int REAL = 55;
    public const int BINARY_INTEGER = 96;
    public const int WS = 105;
    public const int USES = 78;
    public const int UNTIL = 80;
    public const int OR = 30;
    public const int CONSTANT = 8;
    public const int GR = 83;
    public const int REPEAT = 72;
    public const int ELSIF = 77;
    public const int DINT = 36;
    public const int FALSE = 75;
    public const int ULINT = 41;
    public const int VAR_TEMP = 7;
    public const int TIME_OF_DAY_LIT = 46;
    public const int UINT = 39;
    public const int T__116 = 116;
    public const int T__114 = 114;
    public const int ASSIGN2 = 22;
    public const int T__115 = 115;
    public const int DATE_LIT = 45;
    public const int FOR = 67;
    public const int DOTDOT = 89;
    public const int AND = 99;
    public const int REAL_CONSTANT = 95;
    public const int IF = 65;
    public const int TIME = 44;
    public const int THEN = 81;
    public const int END_FUNCTION = 16;
    public const int T__107 = 107;
    public const int DWORD = 53;
    public const int CONTINUE = 73;
    public const int COMMA = 26;
    public const int T__108 = 108;
    public const int T__109 = 109;
    public const int UDINT = 40;
    public const int IDENTIFIER = 91;
    public const int T__106 = 106;
    public const int T__111 = 111;
    public const int T__110 = 110;
    public const int T__113 = 113;
    public const int PLUS = 87;
    public const int T__112 = 112;
    public const int WSTRING = 12;
    public const int DOT = 100;
    public const int PRAGMAS = 103;
    public const int FUNCTION_BLOCK = 17;
    public const int INTEGER = 92;
    public const int BYTE = 51;
    public const int BY = 69;
    public const int XOR = 31;
    public const int TO = 68;
    public const int LINT = 37;
    public const int STRUCT = 61;
    public const int TRUE = 74;
    public const int COLON = 23;
    public const int COUNTER = 42;
    public const int TOD = 47;
    public const int NEQ = 64;
    public const int END_PROGRAM = 90;
    public const int HEX_INTEGER = 98;
    public const int VAR_INPUT = 9;
    public const int NEG = 88;
    public const int ASSIGN = 21;
    public const int R_EDGE = 59;
    public const int EQU = 32;
    public const int PROGRAM = 4;
    public const int DIV = 27;
    public const int END_FUNCTION_BLOCK = 18;
    public const int VAR_IN_OUT = 10;
    public const int TIMER = 43;
    public const int STRING = 11;
    public const int LEQ = 62;

    // delegates
    // delegators



        public MPALParser(ITokenStream input)
    		: this(input, new RecognizerSharedState()) {
        }

        public MPALParser(ITokenStream input, RecognizerSharedState state)
    		: base(input, state) {
            InitializeCyclicDFAs();

             
        }
        
    protected ITreeAdaptor adaptor = new CommonTreeAdaptor();

    public ITreeAdaptor TreeAdaptor
    {
        get { return this.adaptor; }
        set {
    	this.adaptor = value;
    	}
    }

    override public string[] TokenNames {
		get { return MPALParser.tokenNames; }
    }

    override public string GrammarFileName {
		get { return "J:\\Projekte\\Mea\\MPAL\\mpal-comp\\Mpal.Parser\\MPAL.g"; }
    }


    public class mpal_return : ParserRuleReturnScope
    {
        private object tree;
        override public object Tree
        {
        	get { return tree; }
        	set { tree = (object) value; }
        }
    };

    // $ANTLR start "mpal"
    // J:\\Projekte\\Mea\\MPAL\\mpal-comp\\Mpal.Parser\\MPAL.g:110:1: mpal : ( program_declaration | data_type_declaration | function_declaration | function_block_declaration )+ EOF ;
    public MPALParser.mpal_return mpal() // throws RecognitionException [1]
    {   
        MPALParser.mpal_return retval = new MPALParser.mpal_return();
        retval.Start = input.LT(1);

        object root_0 = null;

        IToken EOF5 = null;
        MPALParser.program_declaration_return program_declaration1 = default(MPALParser.program_declaration_return);

        MPALParser.data_type_declaration_return data_type_declaration2 = default(MPALParser.data_type_declaration_return);

        MPALParser.function_declaration_return function_declaration3 = default(MPALParser.function_declaration_return);

        MPALParser.function_block_declaration_return function_block_declaration4 = default(MPALParser.function_block_declaration_return);


        object EOF5_tree=null;

        try 
    	{
            // J:\\Projekte\\Mea\\MPAL\\mpal-comp\\Mpal.Parser\\MPAL.g:113:6: ( ( program_declaration | data_type_declaration | function_declaration | function_block_declaration )+ EOF )
            // J:\\Projekte\\Mea\\MPAL\\mpal-comp\\Mpal.Parser\\MPAL.g:113:8: ( program_declaration | data_type_declaration | function_declaration | function_block_declaration )+ EOF
            {
            	root_0 = (object)adaptor.GetNilNode();

            	// J:\\Projekte\\Mea\\MPAL\\mpal-comp\\Mpal.Parser\\MPAL.g:113:8: ( program_declaration | data_type_declaration | function_declaration | function_block_declaration )+
            	int cnt1 = 0;
            	do 
            	{
            	    int alt1 = 5;
            	    switch ( input.LA(1) ) 
            	    {
            	    case PROGRAM:
            	    	{
            	        alt1 = 1;
            	        }
            	        break;
            	    case TYPE:
            	    	{
            	        alt1 = 2;
            	        }
            	        break;
            	    case FUNCTION:
            	    	{
            	        alt1 = 3;
            	        }
            	        break;
            	    case FUNCTION_BLOCK:
            	    	{
            	        alt1 = 4;
            	        }
            	        break;

            	    }

            	    switch (alt1) 
            		{
            			case 1 :
            			    // J:\\Projekte\\Mea\\MPAL\\mpal-comp\\Mpal.Parser\\MPAL.g:113:9: program_declaration
            			    {
            			    	PushFollow(FOLLOW_program_declaration_in_mpal1548);
            			    	program_declaration1 = program_declaration();
            			    	state.followingStackPointer--;

            			    	adaptor.AddChild(root_0, program_declaration1.Tree);

            			    }
            			    break;
            			case 2 :
            			    // J:\\Projekte\\Mea\\MPAL\\mpal-comp\\Mpal.Parser\\MPAL.g:113:31: data_type_declaration
            			    {
            			    	PushFollow(FOLLOW_data_type_declaration_in_mpal1552);
            			    	data_type_declaration2 = data_type_declaration();
            			    	state.followingStackPointer--;

            			    	adaptor.AddChild(root_0, data_type_declaration2.Tree);

            			    }
            			    break;
            			case 3 :
            			    // J:\\Projekte\\Mea\\MPAL\\mpal-comp\\Mpal.Parser\\MPAL.g:113:54: function_declaration
            			    {
            			    	PushFollow(FOLLOW_function_declaration_in_mpal1555);
            			    	function_declaration3 = function_declaration();
            			    	state.followingStackPointer--;

            			    	adaptor.AddChild(root_0, function_declaration3.Tree);

            			    }
            			    break;
            			case 4 :
            			    // J:\\Projekte\\Mea\\MPAL\\mpal-comp\\Mpal.Parser\\MPAL.g:113:78: function_block_declaration
            			    {
            			    	PushFollow(FOLLOW_function_block_declaration_in_mpal1560);
            			    	function_block_declaration4 = function_block_declaration();
            			    	state.followingStackPointer--;

            			    	adaptor.AddChild(root_0, function_block_declaration4.Tree);

            			    }
            			    break;

            			default:
            			    if ( cnt1 >= 1 ) goto loop1;
            		            EarlyExitException eee1 =
            		                new EarlyExitException(1, input);
            		            throw eee1;
            	    }
            	    cnt1++;
            	} while (true);

            	loop1:
            		;	// Stops C# compiler whining that label 'loop1' has no statements

            	EOF5=(IToken)Match(input,EOF,FOLLOW_EOF_in_mpal1565); 
            		EOF5_tree = (object)adaptor.Create(EOF5);
            		adaptor.AddChild(root_0, EOF5_tree);


            }

            retval.Stop = input.LT(-1);

            	retval.Tree = (object)adaptor.RulePostProcessing(root_0);
            	adaptor.SetTokenBoundaries(retval.Tree, (IToken) retval.Start, (IToken) retval.Stop);
        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
    	// Conversion of the second argument necessary, but harmless
    	retval.Tree = (object)adaptor.ErrorNode(input, (IToken) retval.Start, input.LT(-1), re);

        }
        finally 
    	{
        }
        return retval;
    }
    // $ANTLR end "mpal"

    public class program_return : ParserRuleReturnScope
    {
        private object tree;
        override public object Tree
        {
        	get { return tree; }
        	set { tree = (object) value; }
        }
    };

    // $ANTLR start "program"
    // J:\\Projekte\\Mea\\MPAL\\mpal-comp\\Mpal.Parser\\MPAL.g:115:1: program : PROGRAM IDENTIFIER ( io_var_declarations | other_var_declarations | data_type_declaration )* function_body END_PROGRAM ;
    public MPALParser.program_return program() // throws RecognitionException [1]
    {   
        MPALParser.program_return retval = new MPALParser.program_return();
        retval.Start = input.LT(1);

        object root_0 = null;

        IToken PROGRAM6 = null;
        IToken IDENTIFIER7 = null;
        IToken END_PROGRAM12 = null;
        MPALParser.io_var_declarations_return io_var_declarations8 = default(MPALParser.io_var_declarations_return);

        MPALParser.other_var_declarations_return other_var_declarations9 = default(MPALParser.other_var_declarations_return);

        MPALParser.data_type_declaration_return data_type_declaration10 = default(MPALParser.data_type_declaration_return);

        MPALParser.function_body_return function_body11 = default(MPALParser.function_body_return);


        object PROGRAM6_tree=null;
        object IDENTIFIER7_tree=null;
        object END_PROGRAM12_tree=null;

        try 
    	{
            // J:\\Projekte\\Mea\\MPAL\\mpal-comp\\Mpal.Parser\\MPAL.g:115:9: ( PROGRAM IDENTIFIER ( io_var_declarations | other_var_declarations | data_type_declaration )* function_body END_PROGRAM )
            // J:\\Projekte\\Mea\\MPAL\\mpal-comp\\Mpal.Parser\\MPAL.g:115:11: PROGRAM IDENTIFIER ( io_var_declarations | other_var_declarations | data_type_declaration )* function_body END_PROGRAM
            {
            	root_0 = (object)adaptor.GetNilNode();

            	PROGRAM6=(IToken)Match(input,PROGRAM,FOLLOW_PROGRAM_in_program1576); 
            		PROGRAM6_tree = (object)adaptor.Create(PROGRAM6);
            		root_0 = (object)adaptor.BecomeRoot(PROGRAM6_tree, root_0);

            	IDENTIFIER7=(IToken)Match(input,IDENTIFIER,FOLLOW_IDENTIFIER_in_program1579); 
            		IDENTIFIER7_tree = (object)adaptor.Create(IDENTIFIER7);
            		adaptor.AddChild(root_0, IDENTIFIER7_tree);

            	// J:\\Projekte\\Mea\\MPAL\\mpal-comp\\Mpal.Parser\\MPAL.g:115:31: ( io_var_declarations | other_var_declarations | data_type_declaration )*
            	do 
            	{
            	    int alt2 = 4;
            	    alt2 = dfa2.Predict(input);
            	    switch (alt2) 
            		{
            			case 1 :
            			    // J:\\Projekte\\Mea\\MPAL\\mpal-comp\\Mpal.Parser\\MPAL.g:115:32: io_var_declarations
            			    {
            			    	PushFollow(FOLLOW_io_var_declarations_in_program1582);
            			    	io_var_declarations8 = io_var_declarations();
            			    	state.followingStackPointer--;

            			    	adaptor.AddChild(root_0, io_var_declarations8.Tree);

            			    }
            			    break;
            			case 2 :
            			    // J:\\Projekte\\Mea\\MPAL\\mpal-comp\\Mpal.Parser\\MPAL.g:115:55: other_var_declarations
            			    {
            			    	PushFollow(FOLLOW_other_var_declarations_in_program1587);
            			    	other_var_declarations9 = other_var_declarations();
            			    	state.followingStackPointer--;

            			    	adaptor.AddChild(root_0, other_var_declarations9.Tree);

            			    }
            			    break;
            			case 3 :
            			    // J:\\Projekte\\Mea\\MPAL\\mpal-comp\\Mpal.Parser\\MPAL.g:115:80: data_type_declaration
            			    {
            			    	PushFollow(FOLLOW_data_type_declaration_in_program1591);
            			    	data_type_declaration10 = data_type_declaration();
            			    	state.followingStackPointer--;

            			    	adaptor.AddChild(root_0, data_type_declaration10.Tree);

            			    }
            			    break;

            			default:
            			    goto loop2;
            	    }
            	} while (true);

            	loop2:
            		;	// Stops C# compiler whining that label 'loop2' has no statements

            	PushFollow(FOLLOW_function_body_in_program1595);
            	function_body11 = function_body();
            	state.followingStackPointer--;

            	adaptor.AddChild(root_0, function_body11.Tree);
            	END_PROGRAM12=(IToken)Match(input,END_PROGRAM,FOLLOW_END_PROGRAM_in_program1597); 
            		END_PROGRAM12_tree = (object)adaptor.Create(END_PROGRAM12);
            		adaptor.AddChild(root_0, END_PROGRAM12_tree);


            }

            retval.Stop = input.LT(-1);

            	retval.Tree = (object)adaptor.RulePostProcessing(root_0);
            	adaptor.SetTokenBoundaries(retval.Tree, (IToken) retval.Start, (IToken) retval.Stop);
        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
    	// Conversion of the second argument necessary, but harmless
    	retval.Tree = (object)adaptor.ErrorNode(input, (IToken) retval.Start, input.LT(-1), re);

        }
        finally 
    	{
        }
        return retval;
    }
    // $ANTLR end "program"

    public class program_declaration_return : ParserRuleReturnScope
    {
        private object tree;
        override public object Tree
        {
        	get { return tree; }
        	set { tree = (object) value; }
        }
    };

    // $ANTLR start "program_declaration"
    // J:\\Projekte\\Mea\\MPAL\\mpal-comp\\Mpal.Parser\\MPAL.g:117:1: program_declaration : PROGRAM IDENTIFIER ( io_var_declarations | other_var_declarations )* function_body END_PROGRAM ;
    public MPALParser.program_declaration_return program_declaration() // throws RecognitionException [1]
    {   
        MPALParser.program_declaration_return retval = new MPALParser.program_declaration_return();
        retval.Start = input.LT(1);

        object root_0 = null;

        IToken PROGRAM13 = null;
        IToken IDENTIFIER14 = null;
        IToken END_PROGRAM18 = null;
        MPALParser.io_var_declarations_return io_var_declarations15 = default(MPALParser.io_var_declarations_return);

        MPALParser.other_var_declarations_return other_var_declarations16 = default(MPALParser.other_var_declarations_return);

        MPALParser.function_body_return function_body17 = default(MPALParser.function_body_return);


        object PROGRAM13_tree=null;
        object IDENTIFIER14_tree=null;
        object END_PROGRAM18_tree=null;

        try 
    	{
            // J:\\Projekte\\Mea\\MPAL\\mpal-comp\\Mpal.Parser\\MPAL.g:117:22: ( PROGRAM IDENTIFIER ( io_var_declarations | other_var_declarations )* function_body END_PROGRAM )
            // J:\\Projekte\\Mea\\MPAL\\mpal-comp\\Mpal.Parser\\MPAL.g:117:24: PROGRAM IDENTIFIER ( io_var_declarations | other_var_declarations )* function_body END_PROGRAM
            {
            	root_0 = (object)adaptor.GetNilNode();
